<resources>
    <string name="app_name">SomeQuiz</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="not_again">This question has been answered</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\’s oldest and deepest freshwater lake.</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="start_new_game">Play again!</string>
    <string name="new_game">New game!</string>
    <string name="question_title_hint">Enter the question</string>
    <string name="answer_title_hint">Enter the answer</string>
    <string name="question_title_label">Question</string>
    <string name="question_answer_label">Answer</string>
    <string name="answer_right_label">Right_answer</string>
    <string name="list_of_questions">List of Questions</string>
    <string name="new_question">New Question</string>
    <string name="delete_question">Delete Question</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d questions</string>

</resources>
