<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_title_label">

    </TextView>

    <EditText
        android:id="@+id/question_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_title_hint"
        android:importantForAutofill="no"
        android:inputType="text">

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <EditText
            android:id="@+id/answer1_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_title_hint"
            android:importantForAutofill="no"
            android:inputType="text">
        </EditText>

        <CheckBox
            android:id="@+id/answer1_right_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_right_label">
        </CheckBox>
        <EditText
            android:id="@+id/answer2_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_title_hint"
            android:importantForAutofill="no"
            android:inputType="text">
        </EditText>

        <CheckBox
            android:id="@+id/answer2_right_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_right_label">
        </CheckBox>
        <EditText
            android:id="@+id/answer3_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_title_hint"
            android:importantForAutofill="no"
            android:inputType="text">
        </EditText>

        <CheckBox
            android:id="@+id/answer3_right_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_right_label">
        </CheckBox>
        <EditText
            android:id="@+id/answer4_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_title_hint"
            android:importantForAutofill="no"
            android:inputType="text">
        </EditText>

        <CheckBox
            android:id="@+id/answer4_right_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_right_label">
        </CheckBox>


    </LinearLayout>


</LinearLayout>